--- a/src/pages/AboutMe/styles.css
+++ b/src/pages/AboutMe/styles.css
@@ -1,7 +1,8 @@
 #page-about {
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     background: linear-gradient(to right, var(--color-purple), var(--color-pure-pink));
+    overflow-x: hidden;
 }
 
 .buttons-row {
