--- a/src/components/ContentCard/styles.css
+++ b/src/components/ContentCard/styles.css
@@ -15,7 +15,7 @@
 @media (min-width: 1100px) {
   #page-about {
       width: 100vw;
-      height: 100vh;
+      min-height: 100vh;
       display: flex;
       align-items: center;
       flex-direction: column;
