--- a/src/pages/ContactMe/styles.css
+++ b/src/pages/ContactMe/styles.css
@@ -1,7 +1,8 @@
 #page-contact {
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   background: linear-gradient(to right, var(--color-orange-pink), var(--color-dark-pink));
+  overflow-x: hidden;
 }
 
 .page-header {
@@ -113,7 +114,7 @@
 @media (min-width: 1100px) {
   #page-contact {
       width: 100vw;
-      height: 100vh;
+      min-height: 100vh;
       display: flex;
       align-items: center;
       flex-direction: column;
