--- a/src/pages/Landing/styles.css
+++ b/src/pages/Landing/styles.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
 
     display: flex;
     justify-content: initial;
