--- a/src/pages/MyWork/styles.css
+++ b/src/pages/MyWork/styles.css
@@ -1,7 +1,8 @@
 #page-work {
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     background-image: linear-gradient(to right, var(--color-dark-blue), var(--color-pure-blue));
+    overflow-x: hidden;
 }
 
 .body-container {
@@ -32,7 +33,7 @@
 @media (min-width: 1100px) {
     #page-work {
         width: 100vw;
-        height: 100vh;
+        min-height: 100vh;
         display: flex;
         align-items: center;
         flex-direction: column;
