--- a/src/components/DarkButton/styles.css
+++ b/src/components/DarkButton/styles.css
@@ -11,8 +11,7 @@
 .container-dark-buttons {
   width: 100px;
   height: 100px;
-  background-color: black;
-  opacity: 0.6;
+  background-color: rgba(0,0,0,0.6);
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -24,11 +23,11 @@
 }
 
 .container-dark-buttons:hover {
-  opacity: 0.5;
+  background-color: rgba(0,0,0,0.5);
 }
 
 .one-button .active {
-  opacity: 0.8;
+  background-color: rgba(0,0,0,0.8);
 }
 
 .buttons-row {
