--- a/src/pages/AboutMe/styles.css
+++ b/src/pages/AboutMe/styles.css
@@ -23,8 +23,7 @@
 
 .body-content {
     width: 90%;
-    background-color: black;
-    opacity: 0.6;
+    background-color: rgba(0,0,0,0.6);
     color: aliceblue;
     margin-top: 5rem;
     display: flex;
